--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,10 @@ jobs:
             # unlock the emulator screen
             sleep 30
             adb shell input keyevent 82
+            wget http://imgur.com/tools/imgurbash.sh
+            chmod a+x imgurbash.sh
+            adb shell screencap -p | sed 's/\r$//' > bootscreen.png
+            ./imgurbash.sh bootscreen.png
       - run:
           name: Run EspressoTests
           command: ./gradlew connectedAndroidTest
